Fix of comment scrollbar

--- a/client/src/containers/CommentSidebar/style.css
+++ b/client/src/containers/CommentSidebar/style.css
@@ -80,8 +80,8 @@ p {
 
 .commentsDiv {
     margin-top: 30px;
-    overflow: scroll;
-    height: 550px;
+    overflow-y: scroll;
+    height: 40vh;
 }
 
 .addComment {
